--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.4/dayjs.min.js"></script>
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -20,6 +22,7 @@
     />
     <link rel="stylesheet" href="./Assets/css/style.css" />
     <title>Work Day Scheduler</title>
+  
   </head>
 
   <body>
@@ -27,6 +30,9 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      
+       
+
     </header>
     <div class="container-lg px-5">
       <!-- Use class for "past", "present", and "future" to apply styles to the
@@ -125,7 +131,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js"
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
       crossorigin="anonymous"
     ></script>
